Added different panels for each user type and created settings func for datagridview1 in workerpanel

--- a/Acciopus/Acciopus/Acciopus.resx
+++ b/Acciopus/Acciopus/Acciopus.resx
@@ -139,7 +139,7 @@ otomasyon projesi ödevi için hazırlanmıştır.
 büyüden ve Latince iş anlamına gelen "Opus" kelimesinden almaktadır.
 
 ♦ Projede kullanılan teknolojiler :
-        - C# .NET Form Uygulaması
+        - Visual Studio .NET Masaüstü Geliştirme
         - MSSQL Database Uygulaması
 </value>
   </data>
