Employer panel is done

--- a/Acciopus/Acciopus/Acciopus.resx
+++ b/Acciopus/Acciopus/Acciopus.resx
@@ -120,7 +120,7 @@
   <data name="label3.Text" xml:space="preserve">
     <value>♦ Bu platform kullanıcıların iş arama ve işçi bulmasına olanak sağlar.
 
-♦ Platform üzerinden iş ilanı ve iş arama ilanı verebilirsiniz.
+♦ Platform üzerinden iş ilanı verebilirsiniz.
 
 ♦ Verdiğiniz ilana gelen teklifleri görüntüleyebilir. Teklif eden 
 kişiye olumlu ya da olumsuz dönüş yapabilirsiniz.
